# RAFTStereo-REX

./: .gitignore  CMakeLists.txt  README.md  environment.yaml  package.xml  requirements.txt  setup.py
docs/: optimization_guide.md
output/: left_cloud.ply
ros/nodes/: raft_stereo_node.py
scripts/: benchmark_optimizations.py  process_images.py  process_static_stereo.py  test_optimizations.py
src/raft_stereo_leaf/: __init__.py  cuda_kernels.py  raft_stereo.py  sdf.py  stereo_utils.py  tensorrt_optimization.py
src/raft_stereo_leaf/utils/: __init__.py
