<?xml version="1.0"?>
<package format="2">
  <name>raft_stereo_leaf</name>  <!-- Changed from raftstereo -->
  <version>1.0.0</version>
  <description>RAFT Stereo package for leaf grasping</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>yoloV8_seg</build_depend>

  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>  <!-- Changed from message_generation -->
  <exec_depend>yoloV8_seg</exec_depend>

  <export>
  </export>
</package>